cabal-version:       >=1.10
name:                cis552-intro
version:             0.1.0.0
synopsis:            Class materials from CIS 552, UPenn
description:         Course introduction: lists and higher-order functions
bug-reports:         cis552@cis.upenn.edu
license:             MIT
license-file:        LICENSE
maintainer:          sweirich@cis.upenn.edu
-- copyright:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library 
  exposed-modules:     Basics
                       HigherOrder
                       SecretCode
                       DList
                       Sum
  build-depends:       base >=4.14 && <4.15
                       , HUnit >= 1.6
  default-language:    Haskell2010
  ghc-options:         -Wno-type-defaults -fwarn-incomplete-patterns

